--- a/AppCafeteria/templates/AppCafeteria/comunidad.html
+++ b/AppCafeteria/templates/AppCafeteria/comunidad.html
@@ -1,11 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COMUNIDAD</title>
-</head>
-<body>
-    <h1> Pagina de comunidad </h1>
-</body>
-</html>
+{% extends "AppCafeteria/padre.html" %}
+
+{% load static %}
+
+{% block titulo %} COMUNIDAD {% endblock %}
+{% block color_boton_comunidad %} active {% endblock %}
+
+{% block contenido %}
+
+
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <h2>CAFETEROS TUCUMANOS</h2>
+                <p class="lead">Sos cafetero y sentis que no hay lugar para vos en Tucuman! Tranqui, somos varios locos buscando lo mismo.</p>
+                <p class="mb-0">Si sos amante del café de especialidad podes registrarte aquí</p>
+
+                <form action="{% url 'comunidad' %}" method="post"> {% csrf_token %} 
+                        
+                    {{formulario.as_p}}
+
+                <input type="submit" value="REGISTRAR USUARIO">
+
+            </form>
+            <h3> {{ mensaje }}</h3>
+
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
