pre entrega 3 con buscar

--- a/AppCafeteria/templates/AppCafeteria/padre.html
+++ b/AppCafeteria/templates/AppCafeteria/padre.html
@@ -22,7 +22,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class= "nav-link {% block color_boton_inicio %} {% endblock %}" aria-current="active"  href="{% url 'inicio' %}">Inicio</a></li>
+                        <li class="nav-item"><a class= "nav-link {% block color_boton_inicio %} {% endblock %}" aria-current="active"  href="{% url 'busquedaCafeteria' %}">Buscar</a></li>
                         <li class="nav-item"><a class="nav-link {% block color_boton_cafeterias %} {% endblock %}" aria-current="page" href="{% url 'cafeterias' %}">Cafeterias</a></li>
                         <li class="nav-item"><a class="nav-link {% block color_boton_baristas %} {% endblock %}" aria-current="page" href="{% url 'baristas' %}">Baristas</a></li>
                         <li class="nav-item"><a class="nav-link {% block color_boton_comunidad %} {% endblock %}" aria-current="page" href="{% url 'comunidad' %}">Comunidad</a></li>
